using System.Collections;
using System.Collections.Generic;
using System.ComponentModel.Design.Serialization;
using UnityEngine;

public class Const
{
    public const string PLAYER_TAG = "Player";
    public const string BOT_TAG = "Bot";

    public const string ANIM_IDLE = "idle";
    public const string ANIM_DANCE = "victory";
    public const string ANIM_RUN = "running";
    public const string ANIM_FALL = "falling";

    public const string NEXT_PLATFORM = "NPlatform";
    public const string WIN_PLATFORM = "WPlatform";
    public const string START_PLATFORM = "SPlatform";

    public const float BRICK_FORCE = 10f;
    public const float BRICK_HEIGHT = 0.35f;
}

